force-app/main/default/objects/Job_Posting_Site__c/Job_Posting_Site__c.object-meta.xml
<CustomObject>
    <description>the custom object for the &quot;Recruiting App&quot;</description>
    <label>Job Posting Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Posting Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>