force-app/main/default/objects/Job_Posting_Site__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description</description>
    <inlineHelpText>Description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>