force-app/main/default/objects/Job_Posting_Site__c/fields/Job_Posting_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Site_URL__c</fullName>
    <description>Job Posting Site URL</description>
    <inlineHelpText>Job Posting Site URL</inlineHelpText>
    <label>Job Posting Site URL</label>
    <type>Url</type>
</CustomField>